tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Admin Menu - ID 28/Close File - ID 48.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="48" name="Close File"></ScriptReference>
	<ObjectList membercount="5">
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20120706 MrW "></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="34" name="Datei schließen" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="DataSourceReference">
					<DataSourceReference id="0" name="Aktuelle Datei"></DataSourceReference>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
