tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Admin Menu - ID 28/GRR Colors - ID 110.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="110" name="GRR Colors"></ScriptReference>
	<ObjectList membercount="10">
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20120706 MrW "></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="74" name="Gehe zu Bezugsdatensatz" enable="True">
			<Options>33554440</Options>
			<ParameterValues membercount="1">
				<Parameter type="Related">
					<TableOccurrenceReference id="1065118" name="Palette.Color"></TableOccurrenceReference>
					<LayoutReferenceContainer value="5">
						<LayoutReference id="5" name="Colors"></LayoutReference>
					</LayoutReferenceContainer>
					<Animation name="Ohne" value="0"></Animation>
					<Options ShowRelated="True"></Options>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="68" name="Wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[Hole ( LayoutTabellenname ) <> "_Color"]]></Text>
							<ChunkList hash="E3E8EC6ABF2706D44DE922C3523BDA76">
								<Chunk type="FunctionRef">Hole</Chunk>
								<Chunk type="NoRef"> ( </Chunk>
								<Chunk type="FunctionRef">LayoutTabellenname</Chunk>
								<Chunk type="NoRef"> ) &lt;&gt; &quot;_Color&quot;</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="6" name="Gehe zu Layout" enable="True">
			<Options>8</Options>
			<ParameterValues membercount="2">
				<Parameter type="LayoutReferenceContainer">
					<LayoutReferenceContainer value="5">
						<LayoutReference id="5" name="Colors"></LayoutReference>
					</LayoutReferenceContainer>
				</Parameter>
				<Parameter type="Animation">
					<Animation name="Ohne" value="0"></Animation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="23" name="Alle Datensätze anzeigen" enable="True">
		</Step>
		<Step id="27" name="Nur Ausgeschlossene anzeigen" enable="True">
		</Step>
		<Step id="70" name="Ende (wenn)" enable="True">
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
