tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Admin Menu - ID 28/Halt Script - ID 147.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="147" name="Halt Script"></ScriptReference>
	<ObjectList membercount="7">
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20130627 MrW  Show status bar"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20130618 MrW "></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="29" name="Werkzeugleisten ein-/ausblenden" enable="True">
			<Options>2</Options>
			<ParameterValues membercount="3">
				<Parameter type="Boolean">
					<Boolean type="Fixieren" id="524288" value="False"></Boolean>
				</Parameter>
				<Parameter type="Boolean">
					<Boolean type="Mit Datensatz-bearbeiten-Werkzeugleiste " id="256" value="False"></Boolean>
				</Parameter>
				<Parameter type="List">
					<List name="Einblenden" value="1"></List>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="90" name="Alle Scripts abbrechen" enable="True">
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
